# asurv

./: .gitignore  AUTHORS.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  asurv.doc  asurv.etc  asurv.f  asurv.sh  asurv.tex  asurv.txt  asurv_cli.py  asurv_code.f  manual.txt  pyproject.toml
.github/: copilot-instructions.md
src/asurv/: __init__.py  _backend.py  _commands.py  _ind.py  _parsers.py  _plots.py  _validate.py  bivar.py  cli.py  km.py  twosample.py
tests/: conftest.py  test_bivar.py  test_km.py  test_parsers.py  test_twosample.py  test_validation.py
