[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asurv"
version = "1.3.0"
description = "Python interface to the ASURV survival analysis package for censored astronomical data"
requires-python = ">=3.9"
dependencies = ["pandas>=1.3", "numpy>=1.21"]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
dev  = ["pytest>=7", "jupyter", "matplotlib>=3.4"]

[project.scripts]
asurv-py = "asurv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that invoke the Fortran binary (require `make` to have been run)",
]
